[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
hyper = { version = "0.14", features = ["full"] }
tracing-subscriber = "0.3"
tower-http = { version = "0.3", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
futures-util = "0.3"
